Fix: Adjust sidebar spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -960,6 +960,15 @@ h3.my-profession {
       max-width: 100%;
       margin-top: 30px;
     }
+    .aside .logo {
+        padding-top: 10px;
+        margin-bottom: 10px;
+      }
+      
+      .aside ul {
+        margin-top: 5px;
+      }
+      
   }
   
 
